# superNova_2177

./: ###requirements-dev.txt  ###requirements-minimal.txt  ###requirements-streamlit.txt  .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  __init__.py  agent_core.py  agent_proposals.txt  agent_ui.py  annual_audit.py  api_key_input.py  app.py  audit_bridge.py  audit_explainer.py  auditor_report_formatter.py  causal_graph.py  causal_trigger.py  config.py  conftest.py  consensus_forecaster_agent.py  consensus_forecaster_agent_ui_hook.py  db_models.py  disclaimers.py  diversity_analyzer.py  docker-compose.yml  exceptions.py  fallback_ui.py  federation_cli.py  frontend_bridge.py  governance_config.py  hook_manager.py  (+60 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
audit/: explainer_ui_hook.py  ui_bridge.py  ui_hook.py
audit_explainer/: __init__.py  ui_hook.py
causal_graph/: __init__.py  ui_hook.py
consensus/: ui_hook.py
demos/: live_demo.py  scenario_builder.py
diary/: ui_hook.py
diversity/: ui_hook.py
diversity_analyzer/: __init__.py  ui_hook.py
docs/: hooks.md  routes.md  scientific_catalog.md  streamlit_ui_extension_example.md  tank_merge_protocol.md
external_services/: __init__.py  base_client.py  llm_client.py  video_client.py  vision_client.py
governance/: governance_reviewer.py  patch_monitor.py
hooks/: events.py
hypothesis/: api_bridge.py  ui_hook.py
install/: install_android.sh  install_desktop.bat  install_desktop.sh
introspection/: __init__.py  introspection_pipeline.py  ui_hook.py
migrations/: 001_add_branchvote_unique_constraint.py  add_vote_counts.py
network/: __init__.py  network_coordination_detector.py  ui_hook.py
optimization/: __init__.py  ui_hook.py
pages/: __init__.py  agents.py  ideas.py  social.py  validation.py  video.py  voting.py
prediction/: __init__.py  ui_hook.py
prediction_manager/: __init__.py  ui_hook.py
predictions/: ui_hook.py
proposals/: engine.py  ui_hook.py
protocols/: README.md  __init__.py  _registry.py  agent_protocols_suite.py  api_bridge.py  ci_pr_protector_agent.py  guardian_interceptor_agent.py  internal_protocol.py  llm_backends.py  message_hub.py  meta_validator_agent.py  observer_agent.py  run_agents_demo.py  simulation_loop.py  to_be_merged.py  ui_hook.py
quantum_sim/: __init__.py  ui_hook.py
realtime_comm/: __init__.py  video_chat.py
reports/: final_scientific_summary.md
rfcs/: README.md  TEMPLATE.md  agent_proposals.txt  template.md
scientific_metrics/: __init__.py  ui_hook.py
scripts/: auto_post_quote.py  build_all_installers.sh  build_appimage.sh  build_executable.ps1  build_executable.sh  check_disclaimers.py  patch_monitor_hook.py  py2app_setup.py  scan_sql_injection.py  setup_env.sh  supernova.nsi  supernova_installer.nsi
social/: __init__.py  follow_ui_hook.py  ui_hook.py
stubs/: fastapi_stub.py  numpy_stub.py  pydantic_settings_stub.py  pydantic_stub.py  sqlalchemy_stub.py
superNova_2177/: LICENSE  audit_bridge.py  audit_explainer.py  auditor_report_formatter.py  causal_graph.py  scientific_metrics.py
system_state_utils/: __init__.py  ui_hook.py
temporal/: __init__.py  ui_hook.py
test_deployment/: requirements.txt
tests/: __init__.py  async_fallback.py  conftest.py  test_agent_registry.py  test_agents_llm_backend.py  test_annual_audit_task.py  test_api_bridge.py  test_app.py  test_async_client_usage.py  test_async_fallback_plugin.py  test_audit_bridge.py  test_audit_ui_hook.py  test_auditor_report_formatter.py  test_background_task_spinner.py  test_branch_vote.py  test_casual_graph.py  test_causal_graph_ui_hook.py  (+73 more)
(+317 files in other folders)
