[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supernova-2177"
version = "0.1.0"
description = "superNova_2177 social metaverse engine"
authors = [{name = "BP-H"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "networkx",
    "python-dateutil",
    "fastapi",
    "python-multipart",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "redis",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "requests",
    "structlog",
    "prometheus-client",
    "python-dotenv",
    "numpy",
    "sympy",
    "sentence-transformers",
    "scipy",
    "tqdm",
    "statsmodels",
    "pulp",
    "matplotlib",
    "python-snappy",
    "qutip",
    "pandas",
    "pygame",
    "mido",
    "midiutil",
    "torch",
    "scikit-learn",
    "streamlit",
    "asyncpg",
    "email-validator",
    "altair>=0",
    "streamlit_json>=0",
    "streamlit-ace>=0",
    "streamlit-lottie>=0",
]

[project.scripts]
supernova-validate = "validate_hypothesis:main"
supernova-federate = "federation_cli:main"
supernova-milestone = "milestone_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
